# RL-Chess

./: .pre-commit-config.yaml  README.md  chess_dqn.py  chess_res.py  frozen_lake_dql.py  main.py  pyproject.toml
.github/workflows/: lint.yml
src/rl_chess/: __init__.py
src/rl_chess/agents/: base.py
src/rl_chess/agents/baseline/: maia_agent.py  random_agent.py
src/rl_chess/agents/custom/: __init__.py  dqn_agent.py  random_test.py
src/rl_chess/benchmark/: README.md  config.py  config.toml  run_benchmark.py  run_eval.py
src/rl_chess/benchmark/config/: config.toml  load_config.py
src/rl_chess/models/dqn/: chess_dqn.py
src/rl_chess/models/resnet/: chess_res.py
src/rl_chess/read_pgn/: read_pgn.ipynb
src/rl_chess/utils/: MonteCarloTreeSearch.py  training.py
