[project]
name = "rl-chess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gym-chess>=0.1.1",
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.8",
    "torch>=2.5.0",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
