[project]
name = "rl-chess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gym-chess>=0.1.1",
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.8",
    "pydantic-settings>=2.13.1",
    "python-chess>=0.31.4",
    "torch>=2.5.0",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
]

[project.scripts]
benchmark = "rl_chess.benchmark.run_benchmark:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.8",
]

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "B",
    "UP",
    "C4",
    "SIM",
    "RET",
    "BLE",
    "TC",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"